feat(technicalUser): add config for dim technical user creation
Refs: #593

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -388,6 +388,10 @@ spec:
               value: "{{ .Values.centralidp.clients.portal }}"
             - name: "OFFERSUBSCRIPTIONPROCESS__ITADMINROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.offerSubscriptionProcess.itAdminRoles.role0 }}"
+            - name: "OFFERSUBSCRIPTIONPROCESS__DIMCREATIONROLES__0__CLIENTID"
+              value: "{{ .Values.centralidp.clients.portal }}"
+            - name: "OFFERSUBSCRIPTIONPROCESS__DIMCREATIONROLES__0__USERROLENAMES__0"
+              value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
             - name: "OFFERPROVIDER__SERVICEMANAGERROLES__0__CLIENTID"
               value: "{{ .Values.centralidp.clients.portal }}"
             - name: "OFFERPROVIDER__SERVICEMANAGERROLES__0__USERROLENAMES__0"
