--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -430,6 +430,23 @@ spec:
           value: "{{ .Values.backend.useDimWallet }}"
         - name: "SERVICEACCOUNT__CLIENTID"
           value: "{{ .Values.backend.administration.serviceAccount.clientId }}"
+        - name: "SERVICEACCOUNT__ENCRYPTIONCONFIGINDEX"
+          value: "{{ .Values.backend.administration.serviceAccount.encryptionConfigIndex }}"
+        - name: "SERVICEACCOUNT__ENCRYPTIONCONFIGS__0__INDEX"
+          value: "{{ .Values.backend.administration.serviceAccount.encryptionConfigs.index0.index }}"
+        - name: "SERVICEACCOUNT__ENCRYPTIONCONFIGS__0__ENCRYPTIONKEY"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.interfaces.secret }}"
+              key: "serviceaccount-encryption-key0"
+        - name: "SERVICEACCOUNT__ENCRYPTIONCONFIGS__0__CIPHERMODE"
+          value: "{{ .Values.backend.administration.serviceAccount.encryptionConfigs.index0.cipherMode }}"
+        - name: "SERVICEACCOUNT__ENCRYPTIONCONFIGS__0__PADDINGMODE"
+          value: "{{ .Values.backend.administration.serviceAccount.encryptionConfigs.index0.paddingMode }}"
+        - name: "SERVICEACCOUNT__DIMCREATIONROLES__0__CLIENTID"
+          value: "{{ .Values.centralidp.clients.portal }}"
+        - name: "SERVICEACCOUNT__DIMCREATIONROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
         - name: "SWAGGERENABLED"
           value: "{{ .Values.backend.administration.swaggerEnabled }}"
         - name: "USERMANAGEMENT__COMPANYUSERSTATUSIDS__0"
