--- a/consortia/environments/values-beta.yaml
+++ b/consortia/environments/values-beta.yaml
@@ -157,6 +157,10 @@ backend:
         - name: "HEALTHCHECKS__0__TAGS__2"
           value: "provisioningdb"
     swaggerEnabled: true
+    serviceAccount:
+      encryptionConfigs:
+        index0:
+          encryptionKey: "<path:portal/data/beta/administration#serviceaccount-encryption-key0>"
 
   provisioning:
     sharedRealm:
