--- a/consortia/environments/values-rc.yaml
+++ b/consortia/environments/values-rc.yaml
@@ -160,6 +160,10 @@ backend:
         - name: "HEALTHCHECKS__0__TAGS__2"
           value: "provisioningdb"
     swaggerEnabled: true
+    serviceAccount:
+      encryptionConfigs:
+        index0:
+          encryptionKey: "<path:portal/data/dev/administration#serviceaccount-encryption-key0>"
 
   provisioning:
     sharedRealm:
