--- a/consortia/environments/values-rc.yaml
+++ b/consortia/environments/values-rc.yaml
@@ -33,7 +33,7 @@ sdfactoryAddress: "https://sdfactory.dev.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
 clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
 issuerComponentAddress: "https://ssi-credential-issuer-rc.dev.demo.catena-x.net"
-bpnDidResolverAddress: "http://bpn-did-resolution-service-bdrs-server-memory:8081/api/management"
+bpnDidResolverAddress: "http://bdrs-bdrs-server:8081/api/management"
 
 frontend:
 
