--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -114,6 +114,8 @@ spec:
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalIntroductionCompanyRolePath }}"
             - name: "APPLICATIONACTIVATION__DATASPACEADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalIntroductionDataspacePath }}"
+            - name: "APPLICATIONACTIVATION__USEDIMWALLET"
+              value: "{{ .Values.backend.useDimWallet }}"
             - name: "APPLICATIONCHECKLIST__BPDM__BASEADDRESS"
               value: "{{ .Values.bpdm.portalGateAddress }}{{ .Values.bpdm.portalGateApiPath }}"
             - name: "APPLICATIONCHECKLIST__BPDM__CLIENTID"
@@ -218,7 +220,7 @@ spec:
             - name: "APPLICATIONCHECKLIST__DIM__UNIVERSALRESOLVERADDRESS"
               value: "{{ .Values.backend.processesworker.dim.universalResolverAddress }}"
             - name: "APPLICATIONCHECKLIST__DIM__DIDDOCUMENTBASELOCATION"
-              value: "{{ .Values.portalAddress }}{{ .Values.backend.processesworker.dim.didDocumentPath }}"
+              value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.dim.didDocumentPath }}"
             - name: "APPLICATIONCHECKLIST__DIM__MAXVALIDATIONTIMEINDAYS"
               value: "{{ .Values.backend.processesworker.dim.maxValidationTimeInDays }}"
             - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGINDEX"
