fix(bpnDidResolver): adjust config

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -270,9 +270,9 @@ spec:
               value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.cipherMode }}"
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__PADDINGMODE"
               value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.paddingMode }}"
-            - name: "APPLICATIONCHECKLIST__BPNDIDRESOLVER__BASEADDRESS"
+            - name: "BPNDIDRESOLVER__BASEADDRESS"
               value: "{{ .Values.bpnDidResolverAddress }}"
-            - name: "APPLICATIONCHECKLIST__BPNDIDRESOLVER__APIKEY"
+            - name: "BPNDIDRESOLVER__APIKEY"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
