--- a/consortia/environments/values-dev.yaml
+++ b/consortia/environments/values-dev.yaml
@@ -32,7 +32,7 @@ custodianAddress: "https://managed-identity-wallets-new.dev.demo.catena-x.net"
 sdfactoryAddress: "https://sdfactory.dev.demo.catena-x.net"
 clearinghouseAddress: "https://validation.test.dih-cloud.com"
 clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
-issuerComponentAddress: "https://ssi-credential-issuer.dev.demo.catena-x.net"
+issuerComponentAddress: "https://ssi-credential-issuer-backend.dev.demo.catena-x.net"
 bpnDidResolverAddress: "http://bdrs-bdrs-server:8081/api/management"
 dimWrapper:
   baseAddress: "https://dim.dev.demo.catena-x.net"
