--- a/consortia/environments/values-dev.yaml
+++ b/consortia/environments/values-dev.yaml
@@ -267,7 +267,7 @@ backend:
         index0:
           encryptionKey: "<path:portal/data/dev/processes-worker#issuercomponent-encryption-key0>"
     bpnDidResolver:
-      clientSecret: "<path:portal/data/dev/processes-worker#bpndidresolver-api-key>"
+      apiKey: "<path:portal/data/dev/processes-worker#bpndidresolver-api-key>"
     invitation:
       encryptionConfigs:
         index0:
