--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -897,7 +897,7 @@ backend:
           # Expected format is 256 bit (64 digits) hex.
           encryptionKey: ""
     bpnDidResolver:
-      # -- ApiKey management endpoint of the bpnDidResolver. Secret-key 'bpndidresolver-api-key'.
+      # -- ApiKey for management endpoint of the bpnDidResolver. Secret-key 'bpndidresolver-api-key'.
       apiKey: ""
     invitation:
       invitedUserInitialRoles:
