--- a/charts/portal/templates/deployment-frontend-portal.yaml
+++ b/charts/portal/templates/deployment-frontend-portal.yaml
@@ -56,6 +56,8 @@ spec:
             value: "{{ .Values.portalBackendAddress }}"
           - name: CENTRALIDP_URL
             value: "{{ .Values.centralidp.address }}{{ .Values.frontend.centralidpAuthPath }}"
+          - name: SSI_CREDENTIAL_URL
+            value: "{{ .Values.ssiCredentialAddress }}"
           - name: BPDM_API_URL
             value: "{{ .Values.bpdm.poolAddress }}{{ .Values.bpdm.poolApiPath }}"
           - name: SEMANTICS_URL
