chore: change bpnDidResolverAddress remove api/management trailing path

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -64,8 +64,8 @@ clearinghouseAddress: "https://validation.example.org"
 clearinghouseTokenAddress: "https://keycloak.example.org/realms/example/protocol/openid-connect/token"
 # -- Provide issuer component base address
 issuerComponentAddress: "https://issuercomponent.example.org"
-# -- Provide management api address of the BPN DID Resolver Service
-bpnDidResolverAddress: "http://bpn-did-resolution-service-bdrs-server:8081/api/management"
+# -- Provide BPN DID Resolver Service base address
+bpnDidResolverAddress: "http://bpn-did-resolution-service-bdrs-server:8081"
 # -- Provide the configuration of the dim wrapper address
 dimWrapper:
 # -- Provide the dim base address
