feat(diUrls): add config for decentral identity urls
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/683

--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -261,6 +261,10 @@ spec:
           value: "{{ .Values.backend.administration.companyData.companyCertificateMediaTypes.type0 }}"
         - name: "COMPANYDATA__DECENTRALIDENTITYMANAGEMENTAUTHURL"
           value: "{{ .Values.decentralIdentityManagementAuthAddress }}"
+        - name: "COMPANYDATA__ISSUERDID"
+          value: "{{ .Values.backend.administration.issuerdid }}"
+        - name: "COMPANYDATA__BPNDIDRESOLVERURL"
+          value: "{{ .Values.bpnDidResolverAddress }}"
         - name: "CONNECTORS__VALIDCERTIFICATIONCONTENTTYPES__0"
           value: "{{ .Values.backend.administration.connectors.validCertificationContentTypes.type0 }}"
         - name: "CONNECTORS__VALIDCERTIFICATIONCONTENTTYPES__1"
