--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -69,6 +69,7 @@ issuerComponentAddress: "https://ssi-credential-issuer.example.org"
 
 # -- Provide BPN DID Resolver Service base address
 bpnDidResolverAddress: "http://bpn-did-resolution-service-bdrs-server:8081"
+bpnDidResolverDirectoryAddress: "http://bpn-did-resolution-service-bdrs-server:8082"
 
 # -- Provide the configuration of the dim wrapper address
 dimWrapper:
@@ -375,6 +376,7 @@ backend:
         type0: "PDF"
       companyCertificateMediaTypes:
         type0: "PDF"
+    issuerdid: "did:web:example.org:test123"
     connectors:
       validCertificationContentTypes:
         type0: "application/x-pem-file"
