chore: improve config for bpn did resolver and enable environment variable for frontend deployment

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -271,7 +271,7 @@ spec:
             - name: "APPLICATIONCHECKLIST__ISSUERCOMPONENT__ENCRYPTIONCONFIGS__0__PADDINGMODE"
               value: "{{ .Values.backend.processesworker.issuerComponent.encryptionConfigs.index0.paddingMode }}"
             - name: "BPNDIDRESOLVER__BASEADDRESS"
-              value: "{{ .Values.bpnDidResolverAddress }}"
+              value: "{{ .Values.bpnDidResolver.managementApiAddress }}"
             - name: "BPNDIDRESOLVER__APIKEY"
               valueFrom:
                 secretKeyRef:
