--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -264,7 +264,7 @@ spec:
         - name: "COMPANYDATA__ISSUERDID"
           value: "{{ .Values.backend.administration.issuerdid }}"
         - name: "COMPANYDATA__BPNDIDRESOLVERURL"
-          value: "{{ .Values.bpnDidResolverAddress }}"
+          value: "{{ .Values.bpnDidResolver.managementApiAddress }}"
         - name: "CONNECTORS__VALIDCERTIFICATIONCONTENTTYPES__0"
           value: "{{ .Values.backend.administration.connectors.validCertificationContentTypes.type0 }}"
         - name: "CONNECTORS__VALIDCERTIFICATIONCONTENTTYPES__1"
