--- a/consortia/environments/values-dev.yaml
+++ b/consortia/environments/values-dev.yaml
@@ -37,7 +37,8 @@ bpnDidResolverAddress: "http://bdrs-bdrs-server:8081"
 dimWrapper:
   baseAddress: "https://dim.dev.demo.catena-x.net"
 decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
-bpnDidResolverDirectoryAddress: "https://bpn-did-resolution-service.dev.demo.catena-x.net/api/directory"
+bpnDidResolver:
+  directoryApiAddress: "https://bpn-did-resolution-service.dev.demo.catena-x.net/api/directory"
 
 frontend:
 
