--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -35,9 +35,10 @@ clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol
 issuerComponentAddress: "https://ssi-credential-issuer-pen.dev.demo.catena-x.net"
 bpnDidResolverAddress: "http://bdrs-bdrs-server:8081"
 dimWrapper:
-  baseAddress: "https://dim-pen.beta.demo.catena-x.net"
+  baseAddress: "https://dim-pen.dev.demo.catena-x.net"
 decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
-bpnDidResolverDirectoryAddress: "https://bpn-did-resolution-service-pen.dev.demo.catena-x.net/api/directory"
+bpnDidResolver:
+  directoryApiAddress: "https://bpn-did-resolution-service-pen.dev.demo.catena-x.net/api/directory"
 
 frontend:
 
