build(v2.0.0-RC6): bump version and update docs

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -125,7 +125,7 @@ frontend:
     name: "portal"
     image:
       name: "docker.io/tractusx/portal-frontend"
-      portaltag: 433c7a9e197d66c94532a6f323d68fb3fc623405
+      portaltag: v2.0.0-RC6
       pullPolicy: "IfNotPresent"
     # -- We recommend to review the default resource limits as this should a conscious choice.
     resources:
