fix(registration): adjust clearinghouse configuration
* add useWallet flag to clearinghouse configuration

Refs: https://github.com/eclipse-tractusx/portal-backend/issues/695

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -156,6 +156,8 @@ spec:
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
               value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USEDIMWALLET"
+              value: "{{ .Values.backend.useDimWallet }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__BASEADDRESS"
               value: "{{ .Values.custodianAddress }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__MEMBERSHIPERRORMESSAGE"
