--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -138,7 +138,9 @@ spec:
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
-          value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"  
+          value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}" 
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USEDIMWALLET"
+          value: "{{ .Values.backend.useDimWallet }}"
         - name: "APPLICATIONCHECKLIST__CUSTODIAN__MEMBERSHIPERRORMESSAGE"
           value: "{{ .Values.backend.processesworker.custodian.membershipErrorMessage }}"
         - name: "APPLICATIONCHECKLIST__CUSTODIAN__BASEADDRESS"
