feat(dimSa): add configuration for dimUserRoles
Refs: #593

--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -430,6 +430,10 @@ spec:
           value: "{{ .Values.backend.provisioning.sharedRealm.smtpServer.user }}"
         - name: "PROVISIONING__SHAREDREALMCLIENT__CLIENTID"
           value: "{{ .Values.backend.provisioning.sharedRealmClient.clientId }}"
+        - name: "PROVISIONING__DIMUSERROLES__0__CLIENTID"
+          value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
+        - name: "PROVISIONING__DIMUSERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
         - name: "REGISTRATION__DOCUMENTTYPEIDS__0"
           value: "{{ .Values.backend.administration.registration.documentTypeIds.type0 }}"
         - name: "REGISTRATION__HELPADDRESS"
