--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -141,6 +141,10 @@ spec:
           value: "{{ .Values.centralidp.realm }}"
         - name: "PROVISIONING__CENTRALREALMID"
           value: "{{ .Values.backend.provisioning.centralRealmId }}"
+        - name: "PROVISIONING__DIMUSERROLES__0__CLIENTID"
+          value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
+        - name: "PROVISIONING__DIMUSERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
         - name: "SERVICES__APPROVESERVICENOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.services.approveServiceNotificationTypeIds.type0 }}"
         - name: "SERVICES__APPROVESERVICEUSERROLES__0__CLIENTID"
