--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -309,6 +309,10 @@ spec:
           value: "{{ .Values.centralidp.realm }}"
         - name: "PROVISIONING__CENTRALREALMID"
           value: "{{ .Values.backend.provisioning.centralRealmId }}"
+        - name: "PROVISIONING__DIMUSERROLES__0__CLIENTID"
+          value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
+        - name: "PROVISIONING__DIMUSERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGINDEX"
           value: "{{ .Values.backend.processesworker.mailing.encryptionConfigIndex }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__INDEX"
