fix(decline): add decline url for invite process
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/701

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -451,6 +451,8 @@ spec:
               value: "{{ .Values.portalAddress }}{{ .Values.backend.registration.portalRegistrationPath }}"
             - name: "INVITATION__PASSWORDRESENDADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
+            - name: "INVITATION__CLOSEAPPLICATIONADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.processesworker.invitation.closeApplicationPath }}"
             - name: "INVITATION__INITIALLOGINTHEME"
               value: "{{ .Values.backend.processesworker.invitation.initialLoginTheme }}"
             - name: "INVITATION__ENCRYPTIONCONFIGINDEX"
