--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -30,3 +30,6 @@ updates:
       - "github-actions"
     schedule:
       interval: "weekly"
+    groups:
+      dependencies:
+        dependency-type: "production"
