--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -148,6 +148,7 @@ spec:
         - name: "PROVISIONING__DIMUSERROLES__0__CLIENTID"
           value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
         - name: "PROVISIONING__DIMUSERROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.serviceAccount.dimCreationRoles.role0 }}"
         - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
           value: "{{ .Values.centralidp.clients.registration }}"
         - name: "APPMARKETPLACE__SERVICEMANAGERROLES__0__USERROLENAMES__0"
