--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -249,6 +249,7 @@ backend:
           validIssuerPath: "/auth/realms/CX-Central"
           validAudiencePortal: "Cl2-CX-Portal"
           validAudienceRegistration: "Cl1-CX-Registration"
+          clockSkew: "00:05:00"
         refreshInterval: "00:00:30"
       tokenPath: "/auth/realms/CX-Central/protocol/openid-connect/token"
       dbConnection:
