--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -136,6 +136,7 @@ frontend:
       limits:
         cpu: 75m
         memory: 125M
+    requireHttpsUrlPattern: true
   registration:
     name: "registration"
     image:
