chore(consortia): update app templates

--- a/consortia/argocd-app-templates/appsetup-dev.yaml
+++ b/consortia/argocd-app-templates/appsetup-dev.yaml
@@ -20,7 +20,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: portal-upgrade
+  name: portal
 spec:
   destination:
     namespace: product-iam
