--- a/charts/localdev/values.yaml
+++ b/charts/localdev/values.yaml
@@ -85,7 +85,7 @@ portal:
                 port: 8080
   backend:
     dotnetEnvironment: "Development"
-    useDimWallet: false
+    useDimWallet: true
     keycloak:
       central:
         clientId: "sa-cl1-reg-2"
