feat(clearinghouse): add feature toggle for sd connectivity
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/792

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -204,6 +204,8 @@ spec:
               value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
             - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__CLEARINGHOUSECONNECTDISABLED"
+              value: "{{ .Values.backend.processesworker.clearinghouseConnectDisabled }}"
             - name: "APPLICATIONCHECKLIST__DIM__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__DIM__PASSWORD"
