--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -181,6 +181,8 @@ spec:
           value: "{{ .Values.backend.processesworker.sdfactory.issuerBpn }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__SDFACTORYURL"
           value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__CLEARINGHOUSECONNECTDISABLED"
+          value: "{{ .Values.backend.processesworker.clearinghouseConnectDisabled }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__DIM__USERNAME"
@@ -277,6 +279,8 @@ spec:
           value: "{{ .Values.backend.administration.connectors.validCertificationContentTypes.type3 }}"
         - name: "CONNECTORS__SELFDESCRIPTIONDOCUMENTURL"
           value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.administration.connectors.selfDescriptionDocumentPath }}"
+        - name: "CONNECTORS__CLEARINGHOUSECONNECTDISABLED"
+          value: "{{ .Values.backend.processesworker.clearinghouseConnectDisabled }}"
         - name: "DOCUMENT__ENABLESEEDENDPOINT"
           value: "True"
         - name: "DOCUMENT__FRAMEDOCUMENTTYPEIDS__0"
