chore(dev-flow): maintain latest changes in main branch get rid of the dev branch https://github.com/eclipse-tractusx/portal/issues/243

--- a/.github/workflows/localdev-chart-test.yaml
+++ b/.github/workflows/localdev-chart-test.yaml
@@ -23,7 +23,7 @@ on:
   # push:
   #   paths:
   #     - 'charts/localdev/**'
-  #   branches: [main, dev]
+  #   branches: [main]
   # pull_request:
   #   paths:
   #     - 'charts/localdev/**'
