--- a/consortia/argocd-app-templates/appsetup-dev.yaml
+++ b/consortia/argocd-app-templates/appsetup-dev.yaml
@@ -28,7 +28,7 @@ spec:
   source:
     path: charts/portal
     repoURL: 'https://github.com/eclipse-tractusx/portal.git'
-    targetRevision: dev
+    targetRevision: main
     plugin:
       env:
         - name: AVP_SECRET
