chore: fix comment and default value

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -612,10 +612,10 @@ backend:
       testDataEnvironments: ""
       # -- Option to seed test data provided in a configMap
       testData:
-        #-- ConfigMap containing json files for the tables to seed, e.g. companies.test.json, addresses.test.json, etc.
-        configMap: "test"
-        #-- Filename identifying the test data files e.g. for companies.test.json the value would be "test"
-        filename: "test"
+        # -- ConfigMap containing json files for the tables to seed, e.g. companies.test.json, addresses.test.json, etc.
+        configMap: ""
+        # -- Filename identifying the test data files e.g. for companies.test.json the value would be "test"
+        filename: ""
     logging:
       default: "Information"
   portalmaintenance:
