chore: move deployment config into environments directory

--- a/environments/consortia/argocd-app-templates/appsetup-int.yaml
+++ b/environments/consortia/argocd-app-templates/appsetup-int.yaml
@@ -20,19 +20,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: portal-rc
+  name: portal-upgrade
 spec:
   destination:
-    namespace: product-iam
+    namespace: product-portal
     server: 'https://kubernetes.default.svc'
   source:
     path: charts/portal
     repoURL: 'https://github.com/eclipse-tractusx/portal.git'
-    targetRevision: release-candidate
+    targetRevision: portal-2.0.0
     plugin:
       env:
         - name: AVP_SECRET
           value: vault-secret
         - name: helm_args
-          value: '-f values.yaml -f ../../consortia/environments/values-rc.yaml'
+          value: '-f values.yaml -f ../../environments/consortia/helm-values/values-int.yaml'
   project: project-portal
