--- a/.github/workflows/processes-worker-image-update.yml
+++ b/.github/workflows/processes-worker-image-update.yml
@@ -51,4 +51,4 @@ jobs:
           git config user.email tractusx-bot@eclipse.org
           git add charts/portal/values.yaml
           git commit -m "Add new image for processes worker"
-          bash ./consortia/scripts/push.sh
+          bash ./environments/push.sh
