--- a/.github/workflows/registration-service-image-update.yml
+++ b/.github/workflows/registration-service-image-update.yml
@@ -50,4 +50,4 @@ jobs:
           git config user.email tractusx-bot@eclipse.org
           git add charts/portal/values.yaml
           git commit -m "Add new image for registration service"
-          bash ./consortia/scripts/push.sh
+          bash ./environments/push.sh
