chore: update deployment config (#354)
- deploy to association environment
- move deployment config into environments directory
- add information about deployment configuration in notice file
- remove obsolete deployment config from consortia (pen, stable, beta envs)

--- a/environments/argocd-app-templates/appsetup-int.yaml
+++ b/environments/argocd-app-templates/appsetup-int.yaml
@@ -1,5 +1,5 @@
 ###############################################################
-# Copyright (c) 2023 Contributors to the Eclipse Foundation
+# Copyright (c) 2024 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -23,19 +23,16 @@ metadata:
   name: portal
 spec:
   destination:
-    namespace: product-iam
+    namespace: product-portal
     server: 'https://kubernetes.default.svc'
   source:
     path: charts/portal
     repoURL: 'https://github.com/eclipse-tractusx/portal.git'
-    targetRevision: dev
+    targetRevision: chore/349-deploy-to-eV
     plugin:
       env:
         - name: AVP_SECRET
           value: vault-secret
         - name: helm_args
-          value: '-f values.yaml -f ../../consortia/environments/values-dev.yaml'
+          value: '-f values.yaml -f ../../environments/helm-values/values-int.yaml'
   project: project-portal
-  syncPolicy:
-    automated:
-      prune: true
