--- a/environments/consortia/argocd-app-templates/appsetup-int.yaml
+++ b/environments/consortia/argocd-app-templates/appsetup-int.yaml
@@ -20,7 +20,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: portal
+  name: portal-upgrade
 spec:
   destination:
     namespace: product-portal
@@ -34,5 +34,5 @@ spec:
         - name: AVP_SECRET
           value: vault-secret
         - name: helm_args
-          value: '-f values.yaml -f ../../consortia/environments/values-beta.yaml'
+          value: '-f values.yaml -f ../../environments/consortia/helm-values/values-int.yaml'
   project: project-portal
