build(2.1.0-rc1): bump version and update docs

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -155,7 +155,7 @@ frontend:
     name: "assets"
     image:
       name: "docker.io/tractusx/portal-assets"
-      assetstag: 7318865adbb091bc57a67e1a721f6cf6e158dd08
+      assetstag: v2.0.0
       pullPolicy: "IfNotPresent"
     # -- We recommend to review the default resource limits as this should a conscious choice.
     resources:
