--- a/environments/argocd-app-templates/appsetup-int.yaml
+++ b/environments/argocd-app-templates/appsetup-int.yaml
@@ -28,7 +28,7 @@ spec:
   source:
     path: charts/portal
     repoURL: 'https://github.com/eclipse-tractusx/portal.git'
-    targetRevision: chore/349-deploy-to-eV
+    targetRevision: portal-2.1.0-RC1
     plugin:
       env:
         - name: AVP_SECRET
